# mummer_navigation_config

./: CMakeLists.txt  package.xml
maps/: ideapark.pgm  ideapark.yaml  ideapark_24june.pgm  ideapark_24june.yaml  ideapark_2sept.pgm  ideapark_2sept.xcf  ideapark_2sept.yaml  ideapark_2sept_updated_Jan_20.pgm  ideapark_2sept_updated_Jan_20.yaml  laas_adream_simplified.yaml  laas_adream_simplified.yaml~  laas_adream_simplified_demo.pgm  laas_adream_simplified_demo.xcf  laas_adream_simplified_demo_2.pgm  laas_adream_simplified_demo_2.xcf  laas_adream_simplified_demo_modified.pgm  laas_adream_simplified_nathan.pgm  laas_adream_simplified_nathan.xcf  laas_adream_simplified_nathan.yaml
maps/IDEAPARK/: ideapark_2sept.pgm  mall_wall.DXF
morse_pr2_launch/: morse_pr2.launch
morse_pr2_move_base_config/: global_costmap_params.yaml  hateb_local_planner_holo_params.yaml~  local_costmap_params.yaml  teb_local_planner_params.yaml
pepper_ideapark_launch/: pepper_ideapark.launch
pepper_ideapark_move_base_config/: global_costmap_params.yaml  local_costmap_params.yaml  new_teb_local_planner_params.yaml  teb_local_planner_params.yaml
pepper_launch/: pepper_laas.launch
